--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@actions/core": "^1.2.6"
+    "@actions/core": "^1.2.6",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.isequal": "^4.5.0",
+    "qs": "^6.5.0"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.2.0",
     "@semantic-release/npm": "^7.0.10",
     "@semantic-release/release-notes-generator": "^9.0.1",
@@ -98,7 +98,6 @@
   "browser": {
     "fs": false
   },
-  "funding": "https://github.com/sponsors/AlexRogalskiy",
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
