--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:staged": "lint-staged --no-stash --allow-empty",
     "semantic-release": "semantic-release",
     "commit": "git-cz",
+    "commit:hooks:skip": "set HUSKY_SKIP_HOOKS=1 && git-cz",
     "test:folio": "folio tests/spec/",
     "test": "TZ=utc jest",
     "test:coverage": "jest --collectCoverage",
@@ -49,8 +50,8 @@
     "husky": "^4.2.5",
     "jest": "^27.0.0-next.2",
     "jest-circus": "^26.6.3",
-    "prettier": "^2.1.2",
     "lint-staged": "^10.1.6",
+    "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
     "semantic-release": ">=17.2.3"
   },
