--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "format": "prettier --write **/*.js",
     "format:check": "prettier --check **/*.js",
-    "prepare": "node_modules\\.bin\\ncc build index.js -m -o dist",
+    "prepare": "./node_modules/.bin/ncc build index.js -m -o dist",
     "postpublish": "npm run clean",
     "lint:editorconfig": "editorconfig-checker -exclude \\.yml$",
     "start:action": "npm run prepare && node dist/index.js",
