--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "format": "prettier --write **/*.js",
     "format:check": "prettier --check **/*.js",
-    "prepare": "./node_modules/.bin/ncc build index.js -m -o dist",
+    "prepare": "node_modules/.bin/ncc build index.js -m -o dist",
     "postpublish": "npm run clean",
     "lint:editorconfig": "editorconfig-checker -exclude \\.yml$",
     "start:action": "npm run prepare && node dist/index.js",
@@ -36,6 +36,7 @@
     "@vercel/ncc": "~>0.27.0",
     "babel-eslint": "^10.1.0",
     "cz-conventional-changelog": "^3.3.0",
+    "doctoc": "^2.0.0",
     "editorconfig-checker": "3.3.0",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^6.15.0",
