--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,14 +20,16 @@ commands:
           command: node -v
       - restore_cache:
           name: Restore node_modules cache
-          key: github-action-open-jscharts-{{ checksum "package.json" }}-{{ .Branch }}
+          keys:
+            - github-action-open-jscharts-{{ checksum "package-lock.json" }}-{{ .Branch }} # appends cache key with a hash of pom.xml file
+            - github-action-open-jscharts- # fallback in case previous cache key is not found
 
   save_env_cache:
     description: Saves environment cache
     steps:
       - save_cache:
           name: Save node_modules cache
-          key: github-action-open-jscharts-{{ checksum "package.json" }}-{{ .Branch }}
+          key: github-action-open-jscharts-{{ checksum "package-lock.json" }}-{{ .Branch }}
           paths:
             - node_modules/
 
