--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,44 +12,23 @@
     "es6": true,
     "jest": true
   },
-  "extends": [
-    "plugin:github/recommended",
-    "eslint:recommended",
-    "prettier"
-  ],
-  "plugins": [
-    "node",
-    "import",
-    "prettier",
-    "jest"
-  ],
+  "extends": ["plugin:github/recommended", "eslint:recommended", "prettier"],
+  "plugins": ["node", "import", "prettier", "jest"],
   "rules": {
-    "indent": [
-      "error",
-      2
-    ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "jsx-quotes": [
-      "error",
-      "prefer-double"
-    ],
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "unix"],
+    "jsx-quotes": ["error", "prefer-double"],
     "quotes": [
       "error",
-      "single"
+      "single",
+      {
+        "avoidEscape": true
+      }
     ],
-    "comma-dangle": [
-      "error",
-      "always-multiline"
-    ],
+    "comma-dangle": ["error", "always-multiline"],
     "no-case-declarations": "off",
     "eqeqeq": "warn",
-    "quote-props": [
-      "warn",
-      "consistent-as-needed"
-    ],
+    "quote-props": ["warn", "consistent-as-needed"],
     "keyword-spacing": "error",
     "eslint-comments/no-use": "off",
     "import/no-namespace": "off",
