--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@actions/core": "^1.2.6",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
-    "unfetch": "^4.1.0",
+    "isomorphic-unfetch": "^3.1.0",
     "qs": "^6.5.0"
   },
   "devDependencies": {
