--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "TZ=utc jest",
     "test:coverage": "jest --collectCoverage",
     "test:watch": "jest --watch",
+    "test:all": "npm run test && npm run test:folio",
     "all": "npm run format && npm run lint && npm run prepare"
   },
   "dependencies": {
