--- a/.huskyrc
+++ b/.huskyrc
@@ -1,6 +1,7 @@
 {
   "hooks": {
     "prepare-commit-msg": "git cz --hook --non-interactive --type=feat --subject=\"added new features\" || true",
-    "pre-commit": "pretty-quick --staged --pattern '!test/tests/lint/**' && lint-staged && npm run all"
+    "pre-commit": "pretty-quick --staged --pattern '!test/tests/lint/**' && lint-staged",
+    "pre-push": "npm run all"
   }
 }
