--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:action": "npm run prepare && node dist/index.js",
     "lint": "eslint --cache --fix --quiet --format codeframe --ext js .",
     "lint:staged": "lint-staged --no-stash --allow-empty",
+    "pretty": "pretty-quick --staged --pattern '!test/tests/lint/**'",
     "semantic-release": "semantic-release",
     "commit": "git-cz",
     "test:folio": "folio tests/spec/",
@@ -25,9 +26,10 @@
   },
   "dependencies": {
     "@actions/core": "^1.2.6",
+    "@divyanshu1610/wiki-quotes": "^1.0.0",
+    "isomorphic-unfetch": "^3.1.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
-    "isomorphic-unfetch": "^3.1.0",
     "qs": "^6.5.0"
   },
   "devDependencies": {
