--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@actions/core": "^1.2.6",
-    "famous-quotes": "^1.0.3",
+    "find-quote": "^1.5.4",
     "isomorphic-unfetch": "^3.1.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
